--- a/pin_clone/app/views/pins/new.html.erb
+++ b/pin_clone/app/views/pins/new.html.erb
@@ -1,11 +1,11 @@
+<%= render "navbar" %>
 <h4>New Pin</h4>
-
 <%= form_for @pin do |f| %>
-  <%= f.label "Url" %>
+  <%= f.label "Url:" %>
   <%= f.text_field :url %><br />
-  <%= f.label "Comment" %>
+  <%= f.label "Comment:" %>
   <%= f.text_field :name %><br />
-  <%= f.label "Image" %>
+  <%= f.label "Image:" %>
   <%= f.text_field :image %><br />
   <%= f.submit "New Pin" %>
 <% end %>
